--- a/tiptoe-player/pom.xml
+++ b/tiptoe-player/pom.xml
@@ -24,4 +24,14 @@
 		</dependency>
 
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.zenjava</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>8.2.0</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
